#437275 - As an app developer I want to be able to modify the details <Vaccine> from my app.
Modify -> litetracker ja apicurioga koos
